--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
