--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22",
+    "nodemon": "^2.0.22"
   }
 }
