--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "morgan": "~1.9.1"
   }
 }
